[package]
name = "todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
futures-util = "0.3.15"
once_cell = "1.8.0"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.26"
wither = "0.9.0"
